--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<h3>This is the AppComponent</h3>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <h3>I'm in the app component</h3>
+      <!-- <app-servers></app-servers> -->
+      <!-- <app-binding></app-binding> -->
+      <!-- <div app-servers></div> -->
+      <!-- <div class="app-servers"></div> -->
+      <app-directives></app-directives>
+    </div>
+  </div>
+</div>
