--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,4 @@
-<h1>Server Component</h1>
+<p [ngStyle]="{backgroundColor: getColor()}"
+[ngClass]="{online: serverStatus === 'online'}">
+  {{ 'Server' }} with ID {{ serverId }} is {{ getSeverStatus() }}
+</p>
